make sure review button doesnt overlap

--- a/client/components/collaborationGrid/collaborationGrid.less
+++ b/client/components/collaborationGrid/collaborationGrid.less
@@ -18,6 +18,7 @@
     width: 100%;
     border-top: 1px solid gray;
     color: black;
+    margin-bottom: 50px;
   }
   .review:hover,
   .cardFooter:hover{
